--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ https://templatemo.com/tm-566-medic-care
                 <div class="container">
                     <a class="navbar-brand mx-auto d-lg-none" href="index.html">
                         MEDICIA
+                        Extra
                         <strong class="d-block">Health Specialist</strong>
                     </a>
 
