--- a/index.html
+++ b/index.html
@@ -174,14 +174,14 @@ https://templatemo.com/tm-566-medic-care
                 <div class="container">
                     <div class="row">
 
-                        <h2 class="text-center mb-lg-5 mb-4">Our Timeline</h2>
+                        <h2 class="text-center mb-lg-5 mb-4">User Guide</h2>
                         
                         <div class="timeline">
                             <div class="row g-0 justify-content-end justify-content-md-around align-items-start timeline-nodes">
                                 <div class="col-9 col-md-5 me-md-4 me-lg-0 order-3 order-md-1 timeline-content bg-white shadow-lg">
-                                    <h3 class=" text-light">Get the vaccine</h3>
+                                    <h3 class=" text-light">Sign-up/ Sign-in</h3>
 
-                                    <p>Donec facilisis urna dui, a dignissim mauris pretium a. Quisque quis libero fermentum, tempus felis eu, consequat nibh.</p>
+                                    <p>Sign-in or Sign-up using your email id and password. There are different Sign-in/ Sign-up pages, choose Patient login page if you are a patient</p>
                                 </div>
 
                                 <div class="col-3 col-sm-1 order-2 timeline-icons text-md-center">
@@ -189,7 +189,7 @@ https://templatemo.com/tm-566-medic-care
                                 </div>
 
                                 <div class="col-9 col-md-5 ps-md-3 ps-lg-0 order-1 order-md-3 py-4 timeline-date">
-                                    <time>2021-07-31 Saturday</time>
+                                    <!-- <time>Fisrt Step</time> -->
                                 </div>
                             </div>
 
@@ -197,7 +197,7 @@ https://templatemo.com/tm-566-medic-care
                                 <div class="col-9 col-md-5 ms-md-4 ms-lg-0 order-3 order-md-1 timeline-content bg-white shadow-lg">
                                     <h3 class=" text-light">Consulting your health</h3>
 
-                                    <p>You are fully permitted to use this template for your commercial or personal website. You are not permitted to redistribute the template ZIP file for a download purpose on any other <a href="https://www.google.com/search?q=free+css" target="_blank">Free CSS collection</a> website.</p>
+                                    <p>Choose your Doctor and Consult your problems. Book for an appointment or get help online.</p>
                                 </div>
 
                                 <div class="col-3 col-sm-1 order-2 timeline-icons text-md-center">
@@ -205,7 +205,7 @@ https://templatemo.com/tm-566-medic-care
                                 </div>
 
                                 <div class="col-9 col-md-5 pe-md-3 pe-lg-0 order-1 order-md-3 py-4 timeline-date">
-                                    <time>2021-07-15 Thursday</time>
+                                    <!-- <time>Second Step</time> -->
                                 </div>
                             </div>
 
@@ -213,7 +213,7 @@ https://templatemo.com/tm-566-medic-care
                                 <div class="col-9 col-md-5 me-md-4 me-lg-0 order-3 order-md-1 timeline-content bg-white shadow-lg">
                                     <h3 class=" text-light">Certified Nurses</h3>
 
-                                    <p>Phasellus eleifend, urna interdum congue viverra, arcu neque ultrices ligula, id pulvinar nisi nibh et lacus. Vivamus gravida, ipsum non euismod tincidunt, sapien elit fermentum mi, quis iaculis enim ligula at arcu.</p>
+                                    <p>All the Doctors are Certified and Professional in their field. In case you are not satisfied, you can get appointment from another.</p>
                                 </div>
 
                                 <div class="col-3 col-sm-1 order-2 timeline-icons text-md-center">
@@ -221,17 +221,17 @@ https://templatemo.com/tm-566-medic-care
                                 </div>
 
                                 <div class="col-9 col-md-5 ps-md-3 ps-lg-0 order-1 order-md-3 py-4 timeline-date">
-                                    <time>2021-06-28 Monday</time>
+                                    <!-- <time>Third Step</time> -->
                                 </div>
                             </div>
 
                             <div class="row g-0 justify-content-end justify-content-md-around align-items-start timeline-nodes my-lg-5 my-4">
                                 <div class="col-9 col-md-5 ms-md-4 ms-lg-0 order-3 order-md-1 timeline-content bg-white shadow-lg">
-                                    <h3 class=" text-light">Covid-19 Hospitals</h3>
+                                    <h3 class=" text-light">Prescription Varification</h3>
 
-                                    <p class="mb-0 pb-0">Fusce vestibulum euismod nulla sed ultrices. Praesent rutrum nulla vel sapien euismod, quis tempus dui placerat.</p>
+                                    <p class="mb-0 pb-0">You can also cross-check the prescriptions given by a perticular doctor from other doctors.</p>
                                     
-                                    <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Maecenas faucibus mollis interdum. Donec ullamcorper nulla non metus auctor fringilla</p>
+                                    <p>In case of any miss guidance or miss treatment you can lauch a report.</p>
                                 </div>
 
                                 <div class="col-3 col-sm-1 order-2 timeline-icons text-md-center">
@@ -239,7 +239,7 @@ https://templatemo.com/tm-566-medic-care
                                 </div>
 
                                 <div class="col-9 col-md-5 pe-md-3 pe-lg-0 order-1 order-md-3 py-4 timeline-date">
-                                    <time>2021-05-30 Sunday</time>
+                                    <!-- <time>Fourth Step</time> -->
                                 </div>
                             </div>
 
@@ -247,7 +247,7 @@ https://templatemo.com/tm-566-medic-care
                                 <div class="col-9 col-md-5 me-md-4 me-lg-0 order-3 order-md-1 timeline-content bg-white shadow-lg">
                                     <h3 class=" text-light">Freelance Nursing</h3>
 
-                                    <p>If you need a working contact form that submits email to your inbox, please <a rel="nofollow" href="https://templatemo.com/contact" target="_parent">visit our contact page</a> for more information.</p>
+                                    <p>If you need a working contact us through our email.</p>
                                 </div>
 
                                 <div class="col-3 col-sm-1 order-2 timeline-icons text-md-center">
@@ -255,7 +255,7 @@ https://templatemo.com/tm-566-medic-care
                                 </div>
 
                                 <div class="col-9 col-md-5 ps-md-3 ps-lg-0 order-1 order-md-3 py-4 timeline-date">
-                                    <time>2021-05-18 Tuesday</time>
+                                    <!-- <time>2021-05-18 Tuesday</time> -->
                                 </div>
                             </div>
                         </div>
