--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Medic Care Bootstrap 5 CSS Template</title>
+        <title>Medicia</title>
 
         <!-- CSS FILES -->        
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,7 +42,6 @@ https://templatemo.com/tm-566-medic-care
                 <div class="container">
                     <a class="navbar-brand mx-auto d-lg-none" href="index.html">
                         MEDICIA
-                        Extraneous
                         <strong class="d-block">Health Specialist</strong>
                     </a>
 
